Added voxel shader and voxel draw type for meshes and completed occupancy map example. - Added voxel draw type. - Added geometry base voxel shader: uses normals for voxel half extents. - MeshShapes and MeshResources support voxel draw type. - MeshShapes support normals, including a "uniform normal" option for uniform voxels. - Material selections and topologies updated to support voxels. - Points based pixel shaders discard on zero alpha. - Completed occupancy map example: using voxel rendering and batching lines for efficiency.

--- a/cpp/examples/3es-occupancy/3es-occupancy.h.in
+++ b/cpp/examples/3es-occupancy/3es-occupancy.h.in
@@ -7,12 +7,6 @@
 
 #include "3es-core.h"
 
-#define TES_ENABLE
-#ifdef TES_ENABLE
-namespace tes { class Server; }
-extern tes::Server *g_tesServer;
-#endif // TES_ENABLE
-
 #ifndef _USE_MATH_DEFINES
 #define _USE_MATH_DEFINES
 #endif // _USE_MATH_DEFINES
@@ -62,5 +56,13 @@ extern tes::Server *g_tesServer;
 #define @TARGET_IDENTIFIER@_HIDDEN
 
 #endif // @TARGET_IDENTIFIER@_DLL
+
+#define TES_ENABLE
+#ifdef TES_ENABLE
+namespace tes { class Server; }
+extern tes::Server *g_tesServer;
+#endif // TES_ENABLE
+
+#include "debugids.h"
 
 #endif // __@TARGET_HEADER_GUARD@config_h
