Tool tips added to UI. - Added tool tip scripts to dialogs. - Added tool tips to file icons. - Added tool tips to settings display, extracted from the TooltipAttribute. - Added tool tips to various persistent UI components.

--- a/UnityOFDialog/Assembly-CSharp.csproj
+++ b/UnityOFDialog/Assembly-CSharp.csproj
@@ -65,6 +65,8 @@
      <Compile Include="Assets\Dialogs\MessageBoxUI.cs" />
      <Compile Include="Assets\Dialogs\OpenFileDialog.cs" />
      <Compile Include="Assets\Dialogs\SaveFileDialog.cs" />
+     <Compile Include="Assets\Dialogs\ToolTipInfo.cs" />
+     <Compile Include="Assets\Dialogs\ToolTipOverlay.cs" />
      <Compile Include="Assets\Dialogs\TrueFileSystem.cs" />
      <Compile Include="Assets\TestOFScript.cs" />
  <Reference Include="UnityEngine.UI">
