--- a/3esCore/3esExamplePluginCore/3esExamplePluginCore.csproj
+++ b/3esCore/3esExamplePluginCore/3esExamplePluginCore.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BBAD5963-CDCE-4A2B-9072-295F946280E6}</ProjectGuid>
+    <ProjectGuid>{f5446fc5-e245-4242-9597-38a2cf919c39}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Tes</RootNamespace>
-    <AssemblyName>3esExamplePlugin</AssemblyName>
+    <AssemblyName>3esExamplePluginCore</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -45,7 +45,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PyramidHandler.cs" />
+    <Compile Include="Pyramid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -53,17 +53,9 @@
       <Project>{91d3c546-37ef-4ef1-a48a-487a1f367a33}</Project>
       <Name>3esCore</Name>
     </ProjectReference>
-    <ProjectReference Include="..\3esRuntime\3esRuntime.csproj">
-      <Project>{13d0c0d8-035f-4a6d-8148-ba96ee9ebf9e}</Project>
-      <Name>3esRuntime</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\3esExamplePluginCore\3esExamplePluginCore.csproj">
-      <Project>{F5446FC5-E245-4242-9597-38A2CF919C39}</Project>
-      <Name>3esExamplePluginCore</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
