--- a/3esCore/3esPluginTest/3esPluginTest.csproj
+++ b/3esCore/3esPluginTest/3esPluginTest.csproj
@@ -39,13 +39,16 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Pyramid.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\3esCore\3esCore.csproj">
       <Project>{91d3c546-37ef-4ef1-a48a-487a1f367a33}</Project>
       <Name>3esCore</Name>
       <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\3esExamplePluginCore\3esExamplePluginCore.csproj">
+      <Project>{F5446FC5-E245-4242-9597-38A2CF919C39}</Project>
+      <Name>3esExamplePluginCore</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
