--- a/3esCore/plugin/3esExamplePlugin/3esExamplePlugin.csproj
+++ b/3esCore/plugin/3esExamplePlugin/3esExamplePlugin.csproj
@@ -4,47 +4,58 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C7622A88-DB9D-439A-AC34-8FDDEDD9AB2E}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{BBAD5963-CDCE-4A2B-9072-295F946280E6}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Tes</RootNamespace>
-    <AssemblyName>3esPluginTest</AssemblyName>
+    <AssemblyName>3esExamplePlugin</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\build\Debug\</OutputPath>
+    <OutputPath>..\..\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\build\Release\</OutputPath>
+    <OutputPath>..\..\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="UnityEngine" Condition="!Exists('$(UNITY_DLL_PATH)') And Exists('\\Applications\\Unity\\Unity.app\\Contents\\Managed\\UnityEngine.dll') ">
+      <HintPath>\Applications\Unity\Unity.app\Contents\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine" Condition="!Exists('$(UNITY_DLL_PATH)') And Exists('C:\\Program Files\\Unity\\Editor\\Data\\Managed\\UnityEngine.dll') ">
+      <HintPath>C:\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine" Condition=" Exists('$(UNITY_DLL_PATH)') ">
+      <HintPath>$(UNITY_DLL_PATH)\UnityEngine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="PyramidHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\3esCore\3esCore.csproj">
+    <ProjectReference Include="..\..\3esCore\3esCore.csproj">
       <Project>{91d3c546-37ef-4ef1-a48a-487a1f367a33}</Project>
       <Name>3esCore</Name>
-      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\3esRuntime\3esRuntime.csproj">
+      <Project>{13d0c0d8-035f-4a6d-8148-ba96ee9ebf9e}</Project>
+      <Name>3esRuntime</Name>
     </ProjectReference>
     <ProjectReference Include="..\3esExamplePluginCore\3esExamplePluginCore.csproj">
       <Project>{F5446FC5-E245-4242-9597-38A2CF919C39}</Project>
