Option to (build and) run tests and bug fixes. - Packing the Serialisation test. - Startup script runs selected test if "--test=<name>" is on the command line. - Option to specify initial file stream on the command line. First anonymous argument. - Fixed cone angle attribute. - Spheres support non-uniform scaling.

--- a/3esCore/3esRuntime/3esRuntime.csproj
+++ b/3esCore/3esRuntime/3esRuntime.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Runtime\DataThread.cs" />
     <Compile Include="Runtime\Error.cs" />
     <Compile Include="Runtime\ErrorCode.cs" />
+    <Compile Include="Runtime\FrameTransform.cs" />
     <Compile Include="Runtime\Info.cs" />
     <Compile Include="Runtime\MaterialLibrary.cs" />
     <Compile Include="Runtime\MeshBuilder.cs" />
