Compression and snapshot (and step back) changes: collated packets are used to compress small file chunks rather than compressing the complete file stream. This supports seeking to more locations in the file stream for faster snapshot restoration. - Added CollationStream to manage compression of incoming packets. - Changed StreamThread snapshot management to track nearby file seek locations on the previous collated (compressed) packet boundary and skip packets to the snapshot frame. This results in faster stepping back. - Recording program uses CollationStream to (re)compress incoming packets targeting block sizes at the maximum packet size. - Added CollatedPacketEncoder/Decoder to formalise C# packet collation and extraction. - Added CompressionBuffer for compression and explicitly avoid calls to Stream.Close() on an underlying memory stream, supporting re-used. - Added PacketStreamReader to support reading from fulling compressed file streams (legacy), uncompressed collated packet streams or compressed collated packet streams. - DataThread.LookupRoutingIDName() and supporting methods added for better logging. - Fixed Application.runInBackground management in Router

--- a/3esCore/3esCore/3esCore.csproj
+++ b/3esCore/3esCore/3esCore.csproj
@@ -64,7 +64,6 @@
     <Compile Include="Shapes\Star.cs" />
     <Compile Include="Shapes\Text2D.cs" />
     <Compile Include="Shapes\Text3D.cs" />
-    <Compile Include="Util\CollatedPacketDecoder.cs" />
     <Compile Include="IO\Endian.cs" />
     <Compile Include="IO\NetworkReader.cs" />
     <Compile Include="IO\NetworkWriter.cs" />
@@ -101,7 +100,6 @@
     <Compile Include="Collections\Queue.cs" />
     <Compile Include="IO\PacketHeader.cs" />
     <Compile Include="IO\PacketBuffer.cs" />
-    <Compile Include="Util\CollatedPacketEncoder.cs" />
     <Compile Include="Maths\Matrix3.cs" />
     <Compile Include="Maths\Rotation.cs" />
     <Compile Include="Shapes\SimpleMesh.cs" />
@@ -110,7 +108,6 @@
     <Compile Include="Maths\FloatUtil.cs" />
     <Compile Include="Shapes\MeshBase.cs" />
     <Compile Include="Maths\Colour.cs" />
-    <Compile Include="Util\CompressionBuffer.cs" />
     <Compile Include="IO\Compression\BlockType.cs" />
     <Compile Include="IO\Compression\CompressionMode.cs" />
     <Compile Include="IO\Compression\CopyEncoder.cs" />
@@ -142,6 +139,12 @@
     <Compile Include="Buffers\DefaultArrayPoolBucket.cs" />
     <Compile Include="Buffers\Utilities.cs" />
     <Compile Include="SR.cs" />
+    <Compile Include="IO\CollationStream.cs" />
+    <Compile Include="IO\CollatedPacketDecoder.cs" />
+    <Compile Include="IO\CollatedPacketEncoder.cs" />
+    <Compile Include="IO\CompressionBuffer.cs" />
+    <Compile Include="IO\PacketStreamReader.cs" />
+    <Compile Include="IO\GZipUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="IO\Compression\readme.txt" />
