Resolved various compression issues. C#: - CollatedPacketEncoder changed to collate packets as is in a buffer, then compress the entire buffer on finalisation. - CollatedPacketEncoder sends the uncompressed buffer when compressed data stream is larger than the uncompressed version. - PacketStreamReader made more robust to bad data. Can skip bad data and find the next valid packet. - CompressionBuffer renamed ResuableMemoryStream to better reflect its actual usage. - Added 3esInfo program to decode packet files and provide information about them. - 3esrec modified to support different output options. - 3esrec ServerInfoMessage is now correct and not duplicated. - Some whitespace/tab fixes. Some editors just don’t behave. C++: - CollatedPacket operates like CollatedPacketEncoder, compressing on finalisation and only exporting compressed data when smaller. - TcpConnection won’t write zero bytes. - Listen sockets no longer crash when attempting to accept() on an invalid socket.

--- a/3esCore/3esCore/3esCore.csproj
+++ b/3esCore/3esCore/3esCore.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Net\DestroyMessage.cs" />
     <Compile Include="Threading\SpinLock.cs" />
     <Compile Include="Collections\Queue.cs" />
+    <Compile Include="IO\CollatedPacketEncoder.cs" />
     <Compile Include="IO\PacketHeader.cs" />
     <Compile Include="IO\PacketBuffer.cs" />
     <Compile Include="Maths\Matrix3.cs" />
@@ -141,8 +142,7 @@
     <Compile Include="SR.cs" />
     <Compile Include="IO\CollationStream.cs" />
     <Compile Include="IO\CollatedPacketDecoder.cs" />
-    <Compile Include="IO\CollatedPacketEncoder.cs" />
-    <Compile Include="IO\CompressionBuffer.cs" />
+    <Compile Include="IO\ReusableMemoryStream.cs" />
     <Compile Include="IO\PacketStreamReader.cs" />
     <Compile Include="IO\GZipUtil.cs" />
   </ItemGroup>
