First pass 3esCore logging interface and log window added. - Added Tes.Logging namespace to handed global 3es logging. - Converted various Debug.Log calls to use Tes.Logging. - Implemented Log window runtime UI. - Added FocusInputLayer script to allow controls to set the InputLayer when they gain focus. This addresses some UI keystroke issues.

--- a/3esCore/3esCore/3esCore.csproj
+++ b/3esCore/3esCore/3esCore.csproj
@@ -122,6 +122,10 @@
     <Compile Include="IO\ReusableMemoryStream.cs" />
     <Compile Include="IO\PacketStreamReader.cs" />
     <Compile Include="IO\GZipUtil.cs" />
+    <Compile Include="Logging\ILog.cs" />
+    <Compile Include="Logging\Log.cs" />
+    <Compile Include="Logging\LogLevel.cs" />
+    <Compile Include="Logging\LogCategories.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
