--- a/cpp/examples/3es-occupancy/CMakeLists.txt
+++ b/cpp/examples/3es-occupancy/CMakeLists.txt
@@ -1,5 +1,3 @@
-include(3es)
-
 find_package(octomap)
 
 # Handle older and newer octomap incldue dir variables.
@@ -24,15 +22,8 @@ endif(NOT LIBLAS_FOUND)
 find_package(Boost COMPONENTS "thread")
 link_directories("${Boost_LIBRARY_DIRS}")
 
-tes_32_64()
-tes_endian()
-
-tes_config_file(3es-occupancy 3es-occupancy.h VAR CONFIG_HEADER SHARED)
-include_directories(. "${CMAKE_CURRENT_BINARY_DIR}")
-set(SOURCES "${CONFIG_HEADER}")
-
 list(APPEND SOURCES
-  3es-occupancy.h.in
+  3es-occupancy.h
   3es-occupancy.cpp
   debugids.h
   occupancyloader.cpp
@@ -42,19 +33,19 @@ list(APPEND SOURCES
   p2p.h
 )
 
-include_directories(
-  "${OCTOMAP_INCLUDE_DIRS}"
-  "${LIBLAS_INCLUDE_DIR}"
-  "${LASZIP_INCLUDE_DIR}"
-  )
-
-tes_include_target(3es-core)
+get_target_property(3ESCORE_INCLUDE_DIRS 3es-core INCLUDE_DIRECTORIES)
 add_executable(3es-occupancy ${SOURCES})
-target_link_libraries(3es-occupancy 3es-core)
 target_link_libraries(3es-occupancy
+  3es-core
   ${OCTOMAP_LIBRARIES}
   ${LIBLAS_LIBRARIES}
   ${LASZIP_LIBRARIES}
 )
-
-tes_group_source_by_dir(${SOURCES})
+target_include_directories(3es-occupancy
+  PRIVATE
+    "${3ESCORE_INCLUDE_DIRS}"
+    "${OCTOMAP_INCLUDE_DIRS}"
+    "${LIBLAS_INCLUDE_DIR}"
+    "${LASZIP_INCLUDE_DIR}"
+)
+source_group("source" REGULAR_EXPRESSION ".*$")
