--- a/3esCore/3esRuntime/3esRuntime.csproj
+++ b/3esCore/3esRuntime/3esRuntime.csproj
@@ -32,9 +32,9 @@
     <DocumentationFile>..\..\3rdEyeScene\Assets\plugins\3esRuntime.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="UnityEngine" Condition="!Exists('$(UNITY_DLL_PATH)') And Exists('\\Applications\\Unity\\Unity.app\\Contents\\Managed\\UnityEngine.dll') ">
+    <Reference Include="UnityEngine" >
       <HintPath Condition="'$(UNITY_DLL_PATH)' == '' And Exists('\\Applications\\Unity\\Unity.app\\Contents\\Managed\\UnityEngine.dll')">\Applications\Unity\Unity.app\Contents\Managed\UnityEngine.dll</HintPath>
-      <HintPath Condition="'$(UNITY_DLL_PATH)' == '' And Exists('C:\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll')">C:\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath Condition="'$(UNITY_DLL_PATH)' == '' And Exists('C:\\Program Files\\Unity\\Editor\\Data\\Managed\\UnityEngine.dll')">C:\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
       <HintPath Condition="'$(UNITY_DLL_PATH)' != ''">$(UNITY_DLL_PATH)\\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
